fixed slide overflow

--- a/academy reforge/test.css
+++ b/academy reforge/test.css
@@ -110,10 +110,10 @@ body {
 
 .text{
     color: black;
-    max-width: 300px;
+    max-width: 260px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 5px;
-    margin-right: 15px;
+    margin-left: 15px;
+    margin-right: 25px;
     font-weight: bold;
 }   
 
